[gd_scene load_steps=50 format=2]

[ext_resource path="res://HurtHitbox/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Bee/fly/Bee_Fly_4.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bee.gd" type="Script" id=3]
[ext_resource path="res://HurtHitbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://HurtHitbox/PlayerInRange.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_4.png" type="Texture" id=6]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_3.png" type="Texture" id=7]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_5.png" type="Texture" id=8]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_2.png" type="Texture" id=9]
[ext_resource path="res://Characters/Bee/fly/Bee_Fly_1.png" type="Texture" id=10]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_1.png" type="Texture" id=11]
[ext_resource path="res://Characters/Bee/fly/Bee_Fly_2.png" type="Texture" id=12]
[ext_resource path="res://Characters/Bee/fly/Bee_Fly_3.png" type="Texture" id=13]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_9.png" type="Texture" id=14]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_8.png" type="Texture" id=15]
[ext_resource path="res://Characters/Bee/die/Bee_Die_3.png" type="Texture" id=16]
[ext_resource path="res://Characters/Bee/die/Bee_Die_8.png" type="Texture" id=17]
[ext_resource path="res://Characters/Bee/die/Bee_Die_10.png" type="Texture" id=18]
[ext_resource path="res://Characters/Bee/die/Bee_Die_4.png" type="Texture" id=19]
[ext_resource path="res://Characters/Bee/die/Bee_Die_7.png" type="Texture" id=20]
[ext_resource path="res://Characters/Bee/die/Bee_Die_9.png" type="Texture" id=21]
[ext_resource path="res://Characters/Bee/die/Bee_Die_5.png" type="Texture" id=22]
[ext_resource path="res://Characters/Bee/die/Bee_Die_2.png" type="Texture" id=23]
[ext_resource path="res://Characters/Bee/die/Bee_Die_6.png" type="Texture" id=24]
[ext_resource path="res://Characters/Bee/die/Bee_Die_1.png" type="Texture" id=25]
[ext_resource path="res://Characters/Bee/attack 1/Bee_Attack1_4.png" type="Texture" id=26]
[ext_resource path="res://Characters/Bee/attack 1/Bee_Attack1_2.png" type="Texture" id=27]
[ext_resource path="res://Characters/Bee/attack 1/Bee_Attack1_5.png" type="Texture" id=28]
[ext_resource path="res://Characters/Bee/attack 1/Bee_Attack1_1.png" type="Texture" id=29]
[ext_resource path="res://Characters/Bee/attack 1/Bee_Attack1_6.png" type="Texture" id=30]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=31]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=32]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_10.png" type="Texture" id=33]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_6.png" type="Texture" id=34]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_11.png" type="Texture" id=35]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_7.png" type="Texture" id=36]
[ext_resource path="res://Characters/Bee/attack 1/Bee_Attack1_3.png" type="Texture" id=37]
[ext_resource path="res://Characters/Bee/hit/Bee_Hit_12.png" type="Texture" id=38]
[ext_resource path="res://HurtHitbox/SoftCollision.tscn" type="PackedScene" id=39]
[ext_resource path="res://Music and Sounds/sfx_exp_shortest_hard8.wav" type="AudioStream" id=40]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 29 ), ExtResource( 27 ), ExtResource( 37 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hitbox_enable"
}, {
"args": [  ],
"method": "hit_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.014989,
"start_offset": 0.0,
"stream": ExtResource( 40 )
} ],
"times": PoolRealArray( 0.4 )
}

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fly"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 64.4251
height = 2.41444

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 81.4048, 10 )

[sub_resource type="CircleShape2D" id=8]
radius = 1044.71

[sub_resource type="CircleShape2D" id=10]
radius = 37.5552

[node name="Bee" type="KinematicBody2D"]
position = Vector2( 1.54758, 3.86893 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/RESET = SubResource( 9 )
anims/attack = SubResource( 1 )
anims/die = SubResource( 2 )
anims/fly = SubResource( 3 )
anims/hit = SubResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.49715, 70.7453 )
polygon = PoolVector2Array( -9.54564, 9.33123, 7.91577, 9.72808, -1.21178, -12.8924 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -9.16641, 10.4142 )
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 31 )]
max_health = 3

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
position = Vector2( -6.96408, -80.4736 )
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -27.9734, 123.329 )
shape = SubResource( 7 )
disabled = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 32 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.364706 )
position = Vector2( -7.53662, 12.0586 )
shape = SubResource( 8 )

[node name="PlayerInRange" parent="." instance=ExtResource( 5 )]

[node name="SoftCollision" parent="." instance=ExtResource( 39 )]
position = Vector2( -1.49832, 68.9221 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
bus = "Sounds"

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
